--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header>
         <div class="header-left">Header Logo</div>
-        <ul class="header-right">
-            <li><a href="www.google.com"></a>header link one</li>
-            <li><a href="www.google.com"></a>header link two</li>
-            <li><a href="www.google.com"></a>header link three</li>
-        </ul>
+        <div class="header-right">
+            <a href="https://www.google.com/">header link one</a>
+            <a href="https://www.google.com/">header link two</a>
+            <a href="https://www.google.com/">header link three</a>
+        </div>
     </header>
     <div class="top-blue">
     <div class="top-blue-left">    
